# licitacao360-rust

./: Cargo.toml
src/: caminho.txt  data_wrapper.rs  database.rs  main.rs  paths.rs  utils.rs
src/controller/: menu_lateral.rs  menu_superior.rs  mod.rs
src/modules/: mod.rs
src/modules/atas/: controller.rs  data.rs  mod.rs  view.rs
src/modules/automacoes/: controller.rs  data.rs  mod.rs  view.rs
src/modules/contratos/: controller.rs  data.rs  view.rs
src/modules/contratos/template/: template_contrato.docx
src/modules/dispensa_eletronica/: controller.rs  data.rs  view.rs
src/modules/inicio/: controller.rs  view.rs
src/modules/matriz_riscos/: controller.rs  data.rs  model.rs  view.rs
src/modules/planejamento/: controller.rs  data.rs  mod.rs  view.rs
src/teste/: add_item.py  caminho.txt  classe_dispensa_eletronica.py  configuracao_dispensa_eletronica.py  data.rs  documentos_cp_dfd_tr.py  edit_dialog.py  mod.rs  sql_model.py  utilidades_dispensa_eletronica.py
src/utils/: mod.rs  utf_utils.rs  utils_load.rs
